--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,42 +4,5 @@ mybatis:
   mapper-locations: classpath:mapper/*Mapper.xml
   type-aliases-package: com.lza.blog.pojo
 spring:
-  datasource:
-    druid:
-      url: jdbc:mysql://139.9.130.249:3306/blog?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
-      username: root
-      password: root
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      initialSize: 5
-      minIdle: 5
-      maxActive: 20
-      maxWait: 10000
-      testOnBorrow: true
-      testOnReturn: false
-      timeBetweenEvictionRunsMillis: 60000
-      minEvictableIdleTimeMillis: 300000
-  servlet:
-    multipart:
-      max-file-size: 50MB
-      max-request-size: 100MB
-  data:
-    mongodb:
-      database: blog
-      host: 139.9.130.249
-fdfs:
-  so-timeout: 2500
-  connect-timeout: 600
-  thumb-image:
-    width: 100
-    height: 100
-  tracker-list:
-    - 139.9.130.249:22122
-upload:
-  base-url: http://139.9.130.249/
-  allow-types:
-    - image/jpeg
-    - image/png
-    - image/bmp
-    - image/gif
-    - audio/mpeg
-    - audio/mp3
+  profiles:
+    active: pro
